bk_ida/gobmkida/g0/decide_position
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/decide_position/src/engine/sgfdecide.c:897:1: error: use of undeclared identifier 'snames_0'
snames_0[dragon[pos].crude_status], 
^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/decide_position/src/obj/1/sgfdecide.o] Error 1
